<resources>
    <string name="app_name">Green Army</string>
    <string name="title_project_list">Projects</string>
    <string name="title_project_detail">Project Activities</string>
    <string name="title_activity_enter_activity_data">Enter Activity Data</string>
    <string name="activities_heading">Project Activities</string>
    <string name="activities_instructions">Select an activity to record data.</string>
    <string name="projects_heading">My Projects</string>
    <string name="projects_instructions"></string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="login_progress_message">Logging in...</string>
    <string name="login_failed_message">Invalid user name or password</string>
    <string name="login_failed_title">Login failed</string>
    <string name="title_login_activity">Login</string>
    <string name="login_instructions">Use the user name and password you used when you registered with the Atlas of Living Australia</string>
    <string name="no_network">Unable to contact the server.  Please check your internet connection and try again.</string>
    <string name="bad_credentials">Incorrect username or password.</string>
    <string name="server_error">The server encountered an error - please try again later.</string>
    <string name="action_save_title">Save Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Filter activities</string>
    <string name="open_drawer_button">Select a Project</string>
    <string name="drawer_close">Filter activities</string>
    <string name="no_activities_text">Welcome to the Green Army Mobile application.  To get started, select a project by tapping the home icon or swiping right from the left hand edge of the screen.  If you do not have any projects assigned to you, please contact your service provider to get this corrected.</string>
    <string name="no_project_activities_text">No activities found.  If your expected activities are missing, please contact your service provider to have this corrected.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh data</string>
    <string name="title_activity_welcome">Green Army</string>
    <string name="welcome_message">Welcome to the Green Army Programme application.  Before you get started, you will need to:\n   1. Create an account with the Atlas of Living Australia.\n  2. Ask your service provider to add you as an editor for your projects in the MERIT tool.\n\nIf you already have an account, please ensure your device has internet access and press the "Start" button to login.</string>
    <string name="start">Start</string>
    <string name="loading_activities">Loading activities...</string>
    <string name="project_list_welcome_text">Welcome to the Green Army mobile application.  To get started, tap one of your projects in the list on the left hand side of the screen.</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search activities</string>
    <string name="planned_activity_status">Planned</string>
    <string name="started_activity_status">Started</string>
    <string name="finished_activity_status">Finished</string>
    <string name="deferred_activity_status">Deferred</string>
    <string name="cancelled_activity_status">Cancelled</string>
    <string name="title_activity_site">Create Site</string>
    <string name="title_activity_test_maps">Map</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="new_site_title">SITE DETAILS</string>
    <string name="site_name">Site name</string>
    <string name="site_description">Site description</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="done">Done</string>
    <string name="site_name_required">Site name is required</string>
    <string name="location_title">SITE LOCATION</string>
    <string name="accuracy_title">Accuracy:</string>
    <string name="location_status_searching">Locating your position...</string>
    <string name="status_refining_location">Refining your location...</string>
    <string name="network_warning">Your device doesn\'t appear to be connected to the network.  The map may not be visible, however your location will be found using GPS</string>
    <string name="no_gps_title">Enable GPS?</string>
    <string name="no_gps_message">The GPS on this device is currently disabled, do you want to enable it?  Enabling GPS will allow accurate activity locations to be recorded.</string>
    <string name="unassigned_site"><![CDATA[Site: <i>Unassigned </i>]]></string>
    <string name="new_site_menu">New Site</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="no_projects">No projects found</string>
    <string name="activity_not_modified">Nothing to save</string>
    <string name="activity_validation_failed">Please correct the errors and try again</string>
    <string name="sync_in_progress">Syncing with the server....</string>
    <string name="waiting_for_sync">Waiting to sync with the server....</string>
    <string name="loading_projects">Loading projects</string>
    <string name="reload_projects">Load Projects</string>
    <string name="reload_activities">Load Activities</string>
    <string name="no_location">Waiting for your location</string>
    <string name="location_accuracy_too_low">Waiting for a more accurate location</string>
    <string name="gps_timeout">The system is unable to determine your position accurately.  Please update the site location using the MERIT website when you have internet access.</string>
    <string name="gps_timeout_no_location">The site cannot be created as the system is unable to determine your location.  Please tap back then create the site location using the MERIT website when you have internet access.</string>
    <string name="logout_message">Are you sure you want to logout?\n Any edits not yet synced to the server will be lost.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_title">Logout</string>
    <string name="gps_timout_title">GPS Timeout</string>
    <string name="ok">Ok</string>
    <string name="help_title">Green Army Help</string>
    <string name="about_title">About the Green Army</string>
    <string name="eula_title">End User Licence Agreement</string>
    <string name="agree">I Agree</string>
</resources>