<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/new_site"
        android:title="@string/new_site_menu"
        android:showAsAction="always|withText"
        />
    <item
        android:id="@+id/refresh_menu_item"
        android:title="@string/refresh"
        android:showAsAction="never"
        >
    </item>
    <item
        android:id="@+id/logout_menu_item"
        android:title="@string/logout"
        android:showAsAction="never"
        >
    </item>
    <item
        android:id="@+id/help_menu_item"
        android:title="@string/help"
        android:showAsAction="never"
        >
    </item>

</menu>