<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="au.org.ala.fieldcapture.green_army.SiteActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="0.3"
        android:layout_margin="5dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/new_site_title"
            android:text="@string/new_site_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <EditText
            android:id="@+id/site_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/site_name"
            android:layout_below="@id/new_site_title"/>

        <EditText
            android:id="@+id/site_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/site_description"
            android:singleLine="false"
            android:layout_below="@id/site_name"/>

        <TextView
            android:id="@+id/location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_title"
            android:layout_marginTop="10dp"

            android:layout_below="@id/site_description"/>

        <TextView
            android:id="@+id/latitude_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:text="@string/latitude"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@id/location_title"/>

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@id/latitude_title"/>

        <TextView
            android:id="@+id/longitude_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@id/latitude"/>

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@id/longitude_title"/>

    </RelativeLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="0dp"
        android:layout_weight="0.7"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context="au.org.ala.fieldcapture.green_army.TestMapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>


</LinearLayout>
