<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/project_list_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:id="@+id/project_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/project_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"


            >
            <TextView
                android:id="@+id/project_title"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:textIsSelectable="false"
                android:textColor="@android:color/white"
                android:background="@drawable/username_background"
                android:text="@string/projects_heading"
                tools:context="au.org.ala.fieldcapture.green_army.ActivityListFragment" />
            <TextView
                android:id="@+id/project_instruction"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_weight="0.0"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="16dp"
                android:gravity="right"
                android:layout_alignParentTop="true"
                android:singleLine="false"
                android:textIsSelectable="false"
                android:text="@string/projects_instructions"
                tools:context="au.org.ala.fieldcapture.green_army.ActivityListFragment" />


        </LinearLayout>



        <TextView
            android:id="@+id/no_projects_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_projects"
            android:layout_below="@id/project_heading"
            android:visibility="gone">
        </TextView>

        <ListView
            android:id="@+id/project_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/project_heading"
            >

        </ListView>


    </RelativeLayout>
</FrameLayout>
